--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <script src="map.js"></script>
         <link rel="stylesheet" href="jquery-jvectormap-1.0.css" type="text/css" />
     </head>
+    Sample choropleth map from the <a
+    href="http://handbook.schoolofdata.org/">School of Data Handbook</a>
     <body>
         <div id="worldmap" style="width: 600px; height: 400px;"></div>
     </body>
